syntax = "proto3";

package proto;

// 验证器引入
import "github.com/mwitkow/go-proto-validators@v0.3.2/validator.proto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    // Sends stream message
    rpc SayHelloStream (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
// message HelloRequest {
//     string name = 1;
// }

// 增加验证器
message HelloRequest {
    string name = 1 [
        (validator.field) = {regex: "^[z]{2,5}$"}
    ];
}

// The response message containing the greetings
message HelloReply {
    string message = 1;
}